--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,80 +7,82 @@
 <div class="app__container">
     <div class="grid wide">
         <div class="banner">
-            <div class="banner-content">
+            <div class="banner-container">
                 <div class="banner-left">
                     <div class="banner-left-content">
-                        <div class="grid banner-left-content__top">
+                        <div class="banner-left-content__top">
                             <a href="" class="banner-left-content__top-link">
-                                <div class="banner-home__content-left-container" style="">
+                                <div class="banner-home__content-left-container">
                                     <div class="banner-home__content-left-container-text">
-                                        <h1 class="banner-home__content-left-title">Mua sản phẩm có giảm giá tại F4
-                                            SHOP
+                                        <h1 class="banner-home__content-left-title">
+                                            Mua sản phẩm có giảm giá tại F4 SHOP
                                         </h1>
-                                        <p class="banner-home__content-left-desc">Lorem ipsum dolor sit, amet
-                                            consectetur
-                                            adipisicing elit.
-                                            Asperiores nam numquam deserunt atque soluta quod.
+                                        <p class="banner-home__content-left-desc">
+                                            Tai nghe bluetooth X15 phiên bản Gaming chất lượng cao,
+                                            tai nghe không dây pin trâu âm thanh sống động hợp mọi dòng máy
                                         </p>
                                         <button class="banner-home__content-left-btn">Xem ngay</button>
-                                    </div>
-                                    <div class="banner-home__content-left-container-img">
-                                        <img width="200" src="~/img/iphone_12.png" alt="">
+                                        <div class="banner-home__content-left-container-img">
+                                            <img width="200" src="~/img/sac_du_phong.png" alt="">
+                                        </div>
                                     </div>
                                 </div>
                             </a>
                             <a href="" class="banner-left-content__top-link">
-                                <div class="banner-home__content-left-container" style="">
+                                <div class="banner-home__content-left-container">
                                     <div class="banner-home__content-left-container-text">
-                                        <h1 class="banner-home__content-left-title">Mua sản phẩm khuyến mãi tại F4
-                                            SHOP
+                                        <h1 class="banner-home__content-left-title">
+                                            Mua sản phẩm có giảm giá tại F4 SHOP
                                         </h1>
-                                        <p class="banner-home__content-left-desc">Lorem ipsum dolor sit, amet
-                                            consectetur
-                                            adipisicing elit.
-                                            Asperiores nam numquam deserunt atque soluta quod.
+                                        <p class="banner-home__content-left-desc">
+                                            Tai nghe bluetooth X15 phiên bản Gaming chất lượng cao,
+                                            tai nghe không dây pin trâu âm thanh sống động hợp mọi dòng máy
                                         </p>
                                         <button class="banner-home__content-left-btn">Xem ngay</button>
-                                    </div>
-                                    <div class="banner-home__content-left-container-img">
-                                        <img width="200" src="~/img/sac_du_phong.png" alt="">
+                                        <div class="banner-home__content-left-container-img">
+                                            <img width="200" src="~/img/sac_du_phong.png" alt="">
+                                        </div>
                                     </div>
                                 </div>
                             </a>
                             <a href="" class="banner-left-content__top-link">
-                                <div class="banner-home__content-left-container" style="">
+                                <div class="banner-home__content-left-container">
                                     <div class="banner-home__content-left-container-text">
-                                        <h1 class="banner-home__content-left-title">Mua sản phẩm có giảm giá tại F4
-                                            SHOP
+                                        <h1 class="banner-home__content-left-title">
+                                            Mua sản phẩm có giảm giá tại F4 SHOP
                                         </h1>
-                                        <p class="banner-home__content-left-desc">Lorem ipsum dolor sit, amet
-                                            consectetur
-                                            adipisicing elit.
-                                            Asperiores nam numquam deserunt atque soluta quod.
+                                        <p class="banner-home__content-left-desc">
+                                            Tai nghe bluetooth X15 phiên bản Gaming chất lượng cao,
+                                            tai nghe không dây pin trâu âm thanh sống động hợp mọi dòng máy
                                         </p>
                                         <button class="banner-home__content-left-btn">Xem ngay</button>
-                                    </div>
-                                    <div class="banner-home__content-left-container-img">
-                                        <img width="200" src="~/img/tai_nghe.png" alt="">
+                                        <div class="banner-home__content-left-container-img">
+                                            <img width="200" src="~/img/sac_du_phong.png" alt="">
+                                        </div>
                                     </div>
                                 </div>
-                            </a>
+                            </a>           
                         </div>
+                        <div class="banner-left-content__top-btn">
+                            <i class="uil uil-angle-left banner-left-content__top-btn-icon banner-left-content__top-btn-icon-prev"></i>
+                            <i class="uil uil-angle-right banner-left-content__top-btn-icon banner-left-content__top-btn-icon-next"></i>
+                        </div>
+                                
                         <div class="banner-left-content__bottom">
                             <div class="banner-left-content__bottom-pagination">
-                                @* <div class=""></div>
-                                <div class=""></div>
-                                <div class=""></div> *@
+
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="banner-right">
-                    <div class="grid">
-                        <img class="banner-home__content-right-img" src="~/img/ngat_ngay.jpg" alt="">
-                    </div>
-                    <div class="grid">
-                        <img class="banner-home__content-right-img" src="~/img/banner_my_pham.jpg" alt="">
+                    <div class="banner-right__content">
+                        <div class="banner-right__content-top" style="background-image: url(/img/banner_my_pham.jpg);">
+                                    
+                        </div>
+                        <div class="banner-right__content-bottom" style="background-image: url(/img/ngat_ngay.jpg);">
+                                    
+                        </div>
                     </div>
                 </div>
             </div>
@@ -98,7 +100,7 @@
                     <ul class="row sm-gutter category-list">
                         @foreach (var category in Model.Categories) {
                             <li class="category-item-home">
-                                <a href="/Product/Index?categoryID=@category.PK_iCategoryID" class="category-item-link">
+                                <a href="/product/index/@category.PK_iCategoryID" class="category-item-link">
                                     <div class="category-item__img" style="background-image: url(/img/category/@category.sCategoryImage);">
                                     </div>
                                     <div class="category-item__name">@category.sCategoryName</div>
@@ -118,7 +120,7 @@
                     <div class="row sm-gutter">
                         @foreach (var product in Model.Products) {
                             <div class="col l-2 c-6 m-4">
-                                <a class="home-product-item" href="/Product/Detail/@product.PK_iProductID">
+                                <a class="home-product-item" href="/product/detail/@product.PK_iProductID">
                                     <div class="home-product-item__img"
                                         style="background-image: url(/img/@product.sImageUrl)"></div>
                                     <h4 class="home-product-item__name">@product.sProductName</h4>
