--- a/Views/Shared/_UserLayout.cshtml
+++ b/Views/Shared/_UserLayout.cshtml
@@ -17,7 +17,7 @@
             <div class="grid wide">
                 <div class="header__text">
                     <div class=" header__text-logo ">
-                        <a href="/Home/Index" class=" header_logo-link ">F4 SHOP</a>
+                        <a href="/" class=" header_logo-link ">F4 SHOP</a>
                     </div>
                     <h2 class="header__text-name">@ViewData["Title"]</h2>
                 </div>
