--- a/Views/User/Register.cshtml
+++ b/Views/User/Register.cshtml
@@ -2,6 +2,7 @@
     Layout = "_UserLayout";
     ViewData["Title"] = "Đăng ký";
 }
+@model UserViewModel
 <!--Register form-->
 <div class="app__container">
     <div class="auth">
@@ -10,20 +11,26 @@
 
             </div>
             <div class="auth-form">
-                <form action="/User/Login" method="post" class="auth-form__container">
+                <form action="/User/Register" method="post" class="auth-form__container">
                     <div class="auth-form__header">
                         <h3 class="auth-form__heading">Đăng ký</h3>
                         @* <span class="auth-form__switch-btn"><i class="fa-solid fa-xmark auth-form__close"></i></span> *@
                     </div>
                     <div class="auth-form__form">
                         <div class="auth-form__group">
-                            <input type="text" name="email" id="" class="auth-form__input" placeholder="Email của bạn" />
+                            <input type="text" asp-for="sName" class="auth-form__input" placeholder="Email của bạn" />
+                            <span asp-validation-for="sName" class="auth-msg auth-msg__err"></span>
                         </div>
                         <div class="auth-form__group">
-                            <input type="password" name="password" id="" class="auth-form__input" placeholder="Mật khẩu của bạn" />
+                            <input type="text" asp-for="sEmail" class="auth-form__input" placeholder="Email của bạn" />
+                            <span asp-validation-for="sEmail" class="auth-msg auth-msg__err"></span>
                         </div>
                         <div class="auth-form__group">
-                            <input type="password" name="password" id="" class="auth-form__input" placeholder="Nhập lại mật khẩu" />
+                            <input type="password" asp-for="sPassword"  class="auth-form__input" placeholder="Mật khẩu của bạn" />
+                            <span asp-validation-for="sPassword" class="auth-msg auth-msg__err"></span>
+                        </div>
+                        <div class="auth-form__group">
+                            <input type="password" asp-for="sPassword" name="password" class="auth-form__input" placeholder="Nhập lại mật khẩu" />
                         </div>
                     </div>
                     <div class="auth-form__aside">
@@ -34,7 +41,7 @@
                         </div>
                     </div>
                     <div class="auth-form__controls">
-                        <button id="" class="btn auth-form__controls-back btn--normal js-login-form-close">TRỞ
+                        <button class="btn auth-form__controls-back btn--normal js-login-form-close">TRỞ
                             LẠI</button>
                         <button type="submit" class="btn btn--primary">ĐĂNG NHẬP</button>
                     </div>
