--- a/wwwroot/css/base.css
+++ b/wwwroot/css/base.css
@@ -9,8 +9,9 @@
     --header-height: 120px;
     --header-with-search-height: calc(var(--header-height) - var(--navbar-height));
     --header-sort-bar-height: 46px;
-    --normal-font-size: .938rem;
+    --normal-font-size: 15px; 
     --h1-font-size: 1.5rem; 
+    --font-semi-bold: 600; 
 }
 
 * {
@@ -236,6 +237,255 @@ html {
     color: var(--primary-color);
 }
 
+/* Rate */
+.rate {
+    display: grid;
+    row-gap: 1rem;
+    padding: 30px 0;
+    border-bottom: 1px solid var(--border-color);
+}
+
+.rate__header {
+    margin: 0 auto;
+    font-size: 12px;
+    display: grid;
+    row-gap: 1rem;
+}
+
+.rate__title-point {
+    font-size: 36px;
+} 
+
+.rate__title-total {
+    font-size: 24px;
+    color: #afafac;
+    line-height: 22px;
+}
+
+.rate__title {
+    display: flex;
+    justify-content: center;
+}
+
+.rate__stars i {
+    font-size: 30px;
+    color: var(--star-gold-color);
+}
+
+.rate__evaluate {
+    margin: 0 auto;
+}
+
+.rate__body {
+    margin: 0 auto;
+    display: grid;
+    row-gap: 1rem;
+}
+
+.rate__star {
+    display: flex;
+    column-gap: 2rem;
+    align-items: center;
+}
+
+.rate__num-5-percent,
+.rate__num-4-percent,
+.rate__num-3-percent,
+.rate__num-2-percent,
+.rate__num-1-percent {
+    display: flex;
+    column-gap: 1rem;
+    align-items: center;
+}
+
+.rate__icon-blur {
+    font-size: var(--normal-font-size);
+    color: #eff0f5;
+} 
+
+.rate__icon {
+    font-size: var(--normal-font-size);
+    color: var(--star-gold-color);
+}
+
+.rate__bar {
+    height: 12px;
+    width: 138px;
+    background-color: #eff0f5;
+}
+
+.rate__percent-box {
+    height: inherit;
+    width: 20%;
+    background-color: var(--star-gold-color);
+    display: block;
+}
+
+.rate__me {
+    display: grid;
+    grid-template-areas: "title title" "stars button";
+    gap: 1rem;
+    margin-top: 20px;
+}
+
+.rate__me-title {
+    grid-area: title;
+    font-size: 18px;
+}
+
+.rate__me-stars {
+    grid-area: stars;
+    font-size: 30px;
+    color: var(--star-gold-color);
+}
+
+.btn-evaluate {
+    grid-area: button;
+}
+
+/* Comment */
+.comment {
+    padding: 20px 30px;
+    margin: 10px 4px;
+    background-color: var(--white-color);
+    margin-bottom: 40px;
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1);
+}
+
+.comment__title {
+    font-size: 18px;
+    font-weight: 400;
+    margin-bottom: 1rem;
+}
+
+.comment__body {
+    margin-top: 30px;
+}
+
+.comment__container {
+    display: grid;
+    background-color: var(--white-color);
+    grid-template-areas: "user user user" "comment comment comment" "... ... controls";
+    gap: .5rem;
+    border-radius: 2px;
+    margin-bottom: 1rem;
+}
+
+.comment__user-img {
+    height: 2.5rem;
+    width: 2.5rem;
+    border-radius: 50%;
+}
+
+.comment__user {
+    grid-area: user;
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+}
+
+.comment__username {
+    font-size: var(--normal-font-size);
+    font-weight: var(--font-semi-bold);
+}
+
+.comment__at {
+    font-size: var(--normal-font-size);
+}
+
+.comment__controls {
+    grid-area: controls;
+    display: flex;
+    gap: 1rem;
+    justify-content: flex-end;
+    align-self: center;
+}
+
+.comment__text {
+    grid-area: comment;
+    font-size: var(--normal-font-size);
+    line-height: 1.5;
+    text-align: justify;
+}
+
+.comment__reply,
+.comment__delete,
+.comment__edit {
+    font-size: var(--normal-font-size);
+    display: flex;
+    align-items: center;
+}
+
+.comment__delete {
+    color: var(--primary-color);
+}
+
+.comment__icon {
+    margin-right: 8px;
+    font-size: 2rem;
+}
+
+.comment__replies {
+    margin-left: 2.5rem;
+    padding-left: 2.4rem;
+    border-left: 1px solid var(--border-color);
+}
+
+.comment__reply-to {
+    color: #256eff;
+}
+
+.comment__add {
+    display: grid;
+    grid-template-areas: "input input input" "avatar ... button";
+    grid-template-rows: auto min-content;
+    /* align-items: center; */
+    background-color: var(--white-color);
+    margin-top: 30px;
+    border-radius: 2px;
+    gap: .5rem;
+}
+
+.comment__add .comment__user-img {
+    grid-area: avatar;
+}
+
+.comment__add-input {
+    grid-area: input;
+    /* outline: none; */
+    border-radius: 2px;
+    height: 6rem;
+    padding: .5rem;
+    outline: none;
+    resize: none;
+    border: 1px solid var(--border-color);
+}
+
+.comment__add-input:focus {
+    border-color: #888;
+}
+
+.comment__add-btn {
+    grid-area: button;
+}
+
+.comment__add-btn {
+    background-color: var(--primary-color);
+    min-width: 142px;
+    height: 36px;
+    text-decoration: none;
+    border: none;
+    border-radius: 2px;
+    font-size:1.5rem;
+    padding: 0 ;
+    color: var(--white-color);
+    cursor: pointer;
+    outline: none;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    line-height: 1.6rem;
+}
 /*Pagination*/
 .pagination {
     display: flex;
