--- a/wwwroot/css/cart.css
+++ b/wwwroot/css/cart.css
@@ -1,7 +1,7 @@
 .cart .table {
     height: 500px;
     overflow: auto;
-    min-width: 1000px;
+    /* min-width: 1000px; */
     border-collapse: collapse;
 }
 
@@ -44,6 +44,10 @@
     object-fit: cover;
     border-radius: 15px;
     border: 2px solid #ced0d2;
+}
+
+.cart table tbody tr {
+    background-color: var(--white-color);
 }
 
 .cart__product-name {
@@ -191,6 +195,70 @@
     justify-content: center;
     align-items: center;
     line-height: 1.6rem;
+}
+
+/* Form Message */
+.auth-form__msg {
+    font-size: var(--normal-font-size);
+}
+
+.auth-form {
+    margin-inline: 1.5rem;
+}
+
+@media screen and (max-width: 768px) {
+    .cart .table thead {
+        display: none;
+    }
+
+    .cart table, 
+    .cart table tbody, 
+    .cart table tr,
+    .cart table td {
+        display: block;
+        width: 100%;
+    }
+
+    .cart table tr {
+        margin-bottom: 15px;
+    }
+
+    .cart table tbody tr td {
+        text-align: right;
+        padding-left: 50%;
+        position: relative;
+    }
+
+    .cart__count-btns {
+        justify-content: flex-end;
+    }
+
+    .cart .btn-tools {
+        justify-content: flex-end;
+    }
+
+    .cart__product-name {
+        text-align: right;
+    }
+
+    .cart table td::before {
+        content: attr(data-label);
+        position: absolute;
+        left: 0;
+        width: 50%;
+        padding-left: 15px;
+        font-weight: 600;
+        font-size: 15px;
+        text-align: left;
+    }
+
+    .cart__order {
+        column-gap: 0;
+    }
+
+    .cart .table__total-price {
+        padding: 10px;
+    }
 }
 
 ::-webkit-scrollbar {
