--- a/wwwroot/css/styles.css
+++ b/wwwroot/css/styles.css
@@ -179,6 +179,7 @@
 
 .header__navbar-icon-link:nth-child(2) {
     margin-left: 3px;
+    text-decoration: none;
 }
 
 .header__navbar-item--strong {
@@ -390,7 +391,7 @@
 
 /* Authen Modal*/
 .auth-form {
-    width: 500px;
+    /* width: 500px; */
     background-color: var(--white-color);
     border-radius: 5px;
     overflow: hidden;
@@ -466,6 +467,7 @@
 .auth-form__controls {
     margin-top: 80px;
     display: flex;
+    column-gap: 1rem;
     justify-content: flex-end;
 }
 
@@ -963,11 +965,11 @@
 /*Container*/
 /*********************** BANNER **********************/
 .banner {
-    margin: 30px 0;
-    height: 270px; 
+    margin-top: 30px;
+    height: 240px; 
 }
 
-.banner-content {
+.banner-container {
     display: flex;
     justify-content: space-between;
 }
@@ -978,18 +980,75 @@
 
 .banner-right {
     width: 30%;
+    height: 240px;
     margin-left: 6px;
 }
 
 .banner-home__content-left-container {
+    height: 240px;
     display: flex;
     padding: 10px;
-    line-height: 2;
+    line-height: 1.5;
     text-align: justify;
+}
+
+.banner-left-content__top-btn {
+    position: absolute;
+    top: 40%;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.banner-left-content__top-btn-icon {
+    height: 50px;
+    width: 25px;
+    font-size: 32px;
+    color: var(--white-color);
+    background-color: rgba(0, 0, 0, 0.4);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 2px;
+    transition: all .3s ease;
+    opacity: 0;
+    cursor: pointer;
+}
+
+.banner-left-content:hover .banner-left-content__top-btn-icon {
+    opacity: 1;
+}
+
+.banner-home__content-left-container-text {
+    display: grid;
+    grid-template-areas: "title img" "text img" "button img";
+    gap: 1rem;
+}
+
+.banner-home__content-left-title {
+    grid-area: title;
+}
+
+.banner-home__content-left-desc {
+    grid-area: text;
+}
+
+.banner-home__content-left-btn {
+    grid-area: button;
+}
+
+.banner-home__content-left-container-img {
+    grid-area: img;
 }
 
 .banner-home__content-left-desc {
     font-size: 1.5rem;
+    line-height: 1.4;
+    overflow: hidden;
+    height: 4rem;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
 }
 
 .banner-home__content-left-btn {
@@ -1022,7 +1081,7 @@
 
 .banner-left-content__top {
     width: 100%;
-    height: 270px;
+    height: 240px;
     position: relative;
 }
 
@@ -1031,7 +1090,7 @@
 }
 
 .banner-left-content__top-link {
-    height: 100%;
+    /* height: 100%; */
     text-decoration: none;
     color: var(--white-color);
     position: absolute;
@@ -1069,7 +1128,30 @@
     background: var(--white-color);
 }
 
+.banner-right__content {
+    display: grid;
+    grid-template-areas: "img-top" "img-bottom";
+    gap: .6rem;
+}
+
+.banner-right__content-top {
+    grid-area: img-top;
+    height: 116px;
+    background-size: contain;
+    background-position: center;
+}
+
+.banner-right__content-bottom {
+    height: 116px;
+    grid-area: img-bottom;
+    background-size: contain;
+    background-position: center;
+}
+
 /* Category */
+.category {
+    margin-top: 30px;
+}
 .category-header {
     margin-bottom: 16px;
     padding: 0 20px;
