edit login and registration

--- a/Views/Cart/Index.cshtml
+++ b/Views/Cart/Index.cshtml
@@ -22,35 +22,13 @@
                             <th>Công cụ</th>
                         </tr>
                     </thead>
-                    <tbody>
-                        @foreach (var cart in Model.CartDetails) {
-                            <tr id="product__@cart.PK_iProductID">
-                                <td data-label="Chọn">
-                                    <input type="checkbox" class="cart__checkout-input" name="" id="">
-                                </td>
-                                <td data-label="Tên sản phẩm"><p class="cart__product-name">@cart.sProductName</p></td>
-                                <td data-label="Ảnh"><img src="~/img/@cart.sImageUrl" /></td>
-                                <td data-label="Đơn giá">@cart.dUnitPrice đ</td>
-                                <td data-label="Số lượng">
-                                    <div class="cart__count-btns">
-                                        <button type="button" class="cart__btn-add" onclick="tru(event, @cart.PK_iProductID, @cart.dUnitPrice)">-</button>
-                                        <input name="qnt" type="text" id="qnt" value="@cart.iQuantity" class="cart__count-input" />
-                                        <button type="button" class="cart__btn-sub" onclick="cong(event, @cart.PK_iProductID, @cart.dUnitPrice)">+</button>
-                                    </div>
-                                </td>
-                                <td data-label="Thành tiền" id="money">@cart.dMoney đ</td>
-                                <td>
-                                    <div class='btn-tools'>
-                                        <a class='btn-tool btn-tool__del' href='javascript:deleteProduct(@cart.PK_iProductID)' title='Xoá sản phẩm'><i class='uil uil-trash'></i></a>
-                                    </div>
-                                </td>
-                            </tr>
-                        }
+                    <tbody id="table__body">
+                        
                     </tbody>
                 </table>
                 <div class="cart__order">
                     <div class="cart__checkout">
-                        <input type="checkbox" onchange="checkout()" class="cart__checkout-input" name="" id="">
+                        <input type="checkbox" onchange="checkout()" class="cart__checkout-input" name="" id="" />
                         <label for="" class="cart__checkout-label">Chọn tất cả</label>
                     </div>
                     <p class='table__total-price'>Tổng tiền: 0 đ</p>
