--- a/Views/User/Register.cshtml
+++ b/Views/User/Register.cshtml
@@ -2,7 +2,7 @@
     Layout = "_UserLayout";
     ViewData["Title"] = "Đăng ký";
 }
-@model UserViewModel
+@model RegistrastionModel
 <!--Register form-->
 <div class="app__container">
     <div class="auth">
