--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -61,7 +61,7 @@
                                 <ul class="header__notify-list">
                                     <li class="header__notify-item header__notify-item--viewed ">
                                         <a href="" class="header__notify-link">
-                                            <div class="header__notify-img"><img src="/html/Image/MyPham8.jpg" alt=""
+                                            <div class="header__notify-img"><img src="~/img/iphone_12.png" alt=""
                                                     class=""></div>
                                             <div class="header__notify-info">
                                                 <span class="header__notify-name">Xác thực chính hãnh nguồn gốc của các
@@ -75,7 +75,7 @@
                                     </li>
                                     <li class="header__notify-item header__notify-item--viewed ">
                                         <a href="" class="header__notify-link">
-                                            <div class="header__notify-img"><img src="/html/Image/MyPham4.jpg" alt=""
+                                            <div class="header__notify-img"><img src="~/img/sac_du_phong.png" alt=""
                                                     class=""></div>
                                             <div class="header__notify-info">
                                                 <span class="header__notify-name">Sale Sốc bộ dưỡng 0hui The First tái
@@ -88,7 +88,7 @@
                                     </li>
                                     <li class="header__notify-item header__notify-item--viewed ">
                                         <a href="" class="header__notify-link">
-                                            <div class="header__notify-img"><img src="/html/Image/MyPham3.jpg" alt=""
+                                            <div class="header__notify-img"><img src="~/img/tai_nghe_eport.png" alt=""
                                                     class=""></div>
                                             <div class="header__notify-info">
                                                 <span class="header__notify-name">Mỹ phẩm chính 0thui hãng</span>
@@ -138,22 +138,11 @@
                 </nav>
                 <!--Header with search-->
                 <div class="header-with-search">
-                    @* <label for="category__mobile-input" class="category__navbar-btn">
-                        <i class=" header__mobile-search-icon fa-solid fa-bars"></i>
-                    </label>
-                    <input type="checkbox" hidden id="category__mobile-input" class="catagory__mobile-input">
-                    <label for="category__mobile-input" class="category__overlay"></label>
-
-                    <label for="mobile-search-checkbock" class="header__mobile-search">
-                        <i class="header__mobile-search-icon fa-solid fa-magnifying-glass"></i>
-                    </label> *@
                     <div class="header__logo hide-on-table">
                         <a href="/" class="header__logo-link">
                             <span class="header__logo-icon ">F4 SHOP</span>
                         </a>
                     </div>
-
-                    <input class="header__search-box" type="checkbox" hidden id="mobile-search-checkbock">
 
                     <div class="header__search">
                         <div class="header__search-input-wrap">
@@ -161,14 +150,8 @@
 
                             <!--Search history-->
                             <div class="header__search-history">
-                                @* <h3 class="header__search-history-heading">Lịch sử tìm kiếm</h3> *@
                                 <ul class="header__search-history-list">
-                                    @* <li class="header__search-history-item">
-                                        <a href="">Kem dưỡng da</a>
-                                    </li>
-                                    <li class="header__search-history-item">
-                                        <a href="">Kem trị mụn</a>
-                                    </li> *@
+                                    
                                 </ul>
                             </div>
                         </div>
@@ -214,30 +197,7 @@
                                 <div class="header__cart-list">
                                     <h4 class="header__cart-heading">Sản phẩm đã thêm</h4>
                                     <ul class="header__cart-list-item">
-                                        @foreach (var cart in Model.CartDetails)
-                                        {
-                                            <li class="header__cart-item">
-                                                <div class="header__cart-item-img">
-                                                    <img src="~/img/@cart.sImageUrl" class="header__cart-item-img" alt="">
-                                                </div>
-                                                <div class="header__cart-item-info">
-                                                    <div class="header__cart-item-head">
-                                                        <h5 class="header__cart-item-name">@cart.sProductName</h5>
-                                                        <div class="header__cart-item-price-wrap">
-                                                            <span class="header__cart-item-price">@cart.dUnitPrice đ</span>
-                                                            <span class="header__cart-item-multifly">X</span>
-                                                            <span class="header__cart-item-qnt">@cart.iQuantity</span>
-                                                        </div>
-                                                    </div>
-                                                    <div class="header__cart-item-body">
-                                                        <span class="header__cart-item-description">
-                                                            Phân loại hàng:Bạc
-                                                        </span>
-                                                        <span class="header__cart-item-remove">Xoá</span>
-                                                    </div>
-                                                </div>
-                                            </li>
-                                        }
+                                        
                                     </ul>
                                     <div class="header__cart-btn">
                                         <botton class="header__cart-btn-sub">Xem giỏ hàng</botton>
