--- a/Views/User/Login.cshtml
+++ b/Views/User/Login.cshtml
@@ -2,7 +2,7 @@
     Layout = "_UserLayout";
     ViewData["Title"] = "Đăng nhập";
 }
-@model User
+@model LoginModel
 <!--Login form-->
 <div class="app__container">
     <div class="auth">
