--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -110,7 +110,45 @@
             <div class="success-container">
                 <div class="home-product">
                     <div class="row sm-gutter product__container">
-                        
+                        @foreach (var product in Model.Products) {
+                            <div class="col l-2 c-6 m-4">
+                                <a class="home-product-item" href="/product/detail/@product.PK_iProductID">
+                                    <div class="home-product-item__img"
+                                        style="background-image: url(/img/@product.sImageUrl);"></div>
+                                    <h4 class="home-product-item__name">@product.sProductName</h4>
+                                    <div class="home-product-item__price">
+                                        <span class="home-product-item__price-old">1.200 000đ</span>
+                                        <span class="home-product-item__price-current">@product.dPrice đ</span>
+                                    </div>
+                                    <div class="home-product-item__action">
+                                        <span class="home-product-item__like home-product-item__like--liked">
+                                            <i class="home-product-item__like-icon-empty far fa-heart"></i>
+                                            <i class="home-product-item__like-icon-fill fas fa-heart"></i>
+                                        </span>
+                                        <div class="home-product-item__rating">
+                                            <i class="home-product-item__star--gold fas fa-star"></i>
+                                            <i class="home-product-item__star--gold fas fa-star"></i>
+                                            <i class="home-product-item__star--gold fas fa-star"></i>
+                                            <i class="home-product-item__star--gold fas fa-star"></i>
+                                            <i class="fas fa-star"></i>
+                                        </div>
+                                        <span class="home-product-item__sold"> 88 Đã bán</span>
+                                    </div>
+                                    <div class="home-product-item__origin">
+                                        <span class="home-product-item__brand">Who</span>
+                                        <span class="home-product-item__origin-name">Nhật Bản</span>
+                                    </div>
+                                    <div class="home-product-item__favourite">
+                                        <i class="fas fa-check"></i>
+                                        <span>Yêu thích</span>
+                                    </div>
+                                    <div class="home-product-item__sale-off">
+                                        <span class="home-product-item__sale-off-percent">53%</span>
+                                        <span class="home-product-item__sale-off-label">GIẢM</span>
+                                    </div>
+                                </a>
+                            </div>
+                        }
                     </div>
                 </div>
                 <ul class="pagination home-product__pagination">
