--- a/Views/User/Register.cshtml
+++ b/Views/User/Register.cshtml
@@ -18,7 +18,7 @@
                     </div>
                     <div class="auth-form__form">
                         <div class="auth-form__group">
-                            <input type="text" asp-for="sName" class="auth-form__input" placeholder="Email của bạn" />
+                            <input type="text" asp-for="sName" class="auth-form__input" placeholder="Tên của bạn" />
                             <span asp-validation-for="sName" class="auth-msg auth-msg__err"></span>
                         </div>
                         <div class="auth-form__group">
@@ -30,7 +30,9 @@
                             <span asp-validation-for="sPassword" class="auth-msg auth-msg__err"></span>
                         </div>
                         <div class="auth-form__group">
-                            <input type="password" asp-for="sPassword" name="password" class="auth-form__input" placeholder="Nhập lại mật khẩu" />
+                            @* Không được đặt kiểu name="" bằng một giá trị gì đó khi ta đang dùng Model -> nó sẽ không nhận đc giá trị *@
+                            <input type="password" asp-for="sPasswordConfirm" class="auth-form__input" placeholder="Nhập lại mật khẩu" />
+                            <span asp-validation-for="sPasswordConfirm" class="auth-msg auth-msg__err"></span>
                         </div>
                     </div>
                     <div class="auth-form__aside">
@@ -40,10 +42,14 @@
                             <a href="" class="auth-form__help-link">Cần trợ giúp</a>
                         </div>
                     </div>
+                    <div class="auth-form__result">
+                        @if (TempData["msg"] != null) {
+                            @TempData["msg"]
+                        }
+                    </div>
                     <div class="auth-form__controls">
-                        <button class="btn auth-form__controls-back btn--normal js-login-form-close">TRỞ
-                            LẠI</button>
-                        <button type="submit" class="btn btn--primary">ĐĂNG NHẬP</button>
+                        <button class="btn auth-form__controls-back btn--normal js-login-form-close">TRỞ LẠI</button>
+                        <button type="submit" class="btn btn--primary">ĐĂNG KÝ</button>
                     </div>
                 </form>
                 <div class="auth-form__socials">
