--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -111,28 +111,53 @@
                             class="header__navbar-item header__navbar-item--strong header__navbar-item--separate js-enter-form"><a class="header__navbar-item-link" href="/user/register">Đăng ký</a></li>
                         @if (@accesser?.HttpContext?.Session.GetString("UserName") == "")
                         {
-                            <li class="header__navbar-item header__navbar-item--strong" ><a class="header__navbar-item-link" href="/User/Login">Đăng nhập</a></li>
+                            <li class="header__navbar-item header__navbar-item--strong" ><a class="header__navbar-item-link" href="/user/login">Đăng nhập</a></li>
                         }
                         else
                         {
-                            <li class="header__navbar-item header__navbar-user">
-                                <img src="~/img/no_user.jpg" alt="" class="header__navbar-user-img">
-                                <span class="header__navbar-user-name">@accesser?.HttpContext?.Session.GetString("UserName")</span>
-                                <ul class="header__navbar-user-menu">
-                                    <li class="header__navbar-user-item">
-                                        <a href="/user/profile">Tài khoản của tôi</a>
-                                    </li>
-                                    <li class="header__navbar-user-item">
-                                        <a href="">Địa chỉ của tôi</a>
-                                    </li>
-                                    <li class="header__navbar-user-item">
-                                        <a href="">Đơn mua</a>
-                                    </li>
-                                    <li class="header__navbar-user-item header__navbar-user-item--separate">
-                                        <a href="/User/Logout">Đăng xuất</a>
-                                    </li>
-                                </ul>
-                            </li>
+                            @if (Model.RoleID == 2) {
+                                <li class="header__navbar-item header__navbar-user">
+                                    <img src="~/img/no_user.jpg" alt="" class="header__navbar-user-img">
+                                    <span
+                                        class="header__navbar-user-name">@accesser?.HttpContext?.Session.GetString("UserName")</span>
+                                    <ul class="header__navbar-user-menu">
+                                        <li class="header__navbar-user-item">
+                                            <a href="/user/profile">Tài khoản của tôi</a>
+                                        </li>
+                                        <li class="header__navbar-user-item">
+                                            <a href="">Địa chỉ của tôi</a>
+                                        </li>
+                                        <li class="header__navbar-user-item">
+                                            <a href="">Đơn mua</a>
+                                        </li>
+                                        <li class="header__navbar-user-item">
+                                            <a href="/admin">Quản trị</a>
+                                        </li>
+                                        <li class="header__navbar-user-item header__navbar-user-item--separate">
+                                            <a href="/User/Logout">Đăng xuất</a>
+                                        </li>
+                                    </ul>
+                                </li>
+                            } else {
+                                <li class="header__navbar-item header__navbar-user">
+                                    <img src="~/img/no_user.jpg" alt="" class="header__navbar-user-img">
+                                    <span class="header__navbar-user-name">@accesser?.HttpContext?.Session.GetString("UserName")</span>
+                                    <ul class="header__navbar-user-menu">
+                                        <li class="header__navbar-user-item">
+                                            <a href="/user/profile">Tài khoản của tôi</a>
+                                        </li>
+                                        <li class="header__navbar-user-item">
+                                            <a href="">Địa chỉ của tôi</a>
+                                        </li>
+                                        <li class="header__navbar-user-item">
+                                            <a href="">Đơn mua</a>
+                                        </li>
+                                        <li class="header__navbar-user-item header__navbar-user-item--separate">
+                                            <a href="/User/Logout">Đăng xuất</a>
+                                        </li>
+                                    </ul>
+                                </li>
+                            }
                         }
                     </ul>
                 </nav>
