--- a/Views/Cart/Index.cshtml
+++ b/Views/Cart/Index.cshtml
@@ -1,6 +1,6 @@
 @model ProductViewModel
 @{
-    @* Layout = "_Cart"; *@
+    Layout = "_Cart"; 
     ViewData["Title"] = "Giỏ hàng";
 } 
 <link rel="stylesheet" href="~/css/cart.css">
