--- a/Views/Product/Detail.cshtml
+++ b/Views/Product/Detail.cshtml
@@ -1,6 +1,7 @@
 @model ProductViewModel
 @{
     ViewData["Title"] = "Chi tiết";
+    // Layout = "_Layout";
 }
 <link rel="stylesheet" href="~/css/product_detail.css">
 <div class="app__container">
